src/main/java/org/cep/rulesengine/parser/RuleLangParser.java
// $ANTLR 3.2 Sep 23, 2009 14:05:07 /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g 2018-07-27 21:41:50

	package org.cep.rulesengine.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/** 
 * Recognizes and builds trees for the Rule Language. 
 * Results in RuleLangParser.java, RuleLangLexer.java,
 * and the token definition file RuleLang.tokens used by
 * the tree grammar to ensure token types are the same.
*/
public class RuleLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "LPAREN", "OR", "RPAREN", "AND", "ID", "EQ", "BANGEQ", "GT", "LT", "LTEQ", "GTEQ", "INT", "PLUS", "SLASH", "STAR", "MINUS", "LOOKUP", "THIS", "DOT", "THEN", "CTD", "CRITERIA", "NAMEVAL", "NAME", "VAL", "LEAF", "TIMEROLL", "LITERAL", "ROOT", "SEC", "MIN", "HR", "ACTION", "ARGS", "ARG", "SEMI", "COMMA", "EQL", "WS", "'{'", "'}'", "'for'", "'\\''"
    };
    public static final int TIMEROLL=31;
    public static final int LT=13;
    public static final int STAR=19;
    public static final int HR=36;
    public static final int LTEQ=14;
    public static final int ID=9;
    public static final int AND=8;
    public static final int EOF=-1;
    public static final int LEAF=30;
    public static final int ACTION=37;
    public static final int LPAREN=5;
    public static final int IF=4;
    public static final int RPAREN=7;
    public static final int NAME=28;
    public static final int SLASH=18;
    public static final int THEN=24;
    public static final int ARG=39;
    public static final int SEC=34;
    public static final int COMMA=41;
    public static final int THIS=22;
    public static final int ARGS=38;
    public static final int BANGEQ=11;
    public static final int VAL=29;
    public static final int PLUS=17;
    public static final int NAMEVAL=27;
    public static final int CTD=25;
    public static final int EQ=10;
    public static final int DOT=23;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LITERAL=32;
    public static final int INT=16;
    public static final int MIN=35;
    public static final int GTEQ=15;
    public static final int MINUS=20;
    public static final int SEMI=40;
    public static final int ROOT=33;
    public static final int LOOKUP=21;
    public static final int WS=43;
    public static final int OR=6;
    public static final int CRITERIA=26;
    public static final int GT=12;
    public static final int EQL=42;

    // delegates
    // delegators


        public RuleLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RuleLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return RuleLangParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g"; }



    	public String getErrorMessage(RecognitionException e, String[] tokenNames) {
    		List stack = getRuleInvocationStack(e, this.getClass().getName());
    		String msg = null;
    		if ( e instanceof NoViableAltException ) {
    			NoViableAltException nvae = (NoViableAltException)e;
    			msg = " no viable alt; token="+e.token+
    			" (decision="+nvae.decisionNumber+
    			" state "+nvae.stateNumber+")"+
    			" decision=<<"+nvae.grammarDecisionDescription+">>";
    		} else {
    			msg = super.getErrorMessage(e, tokenNames);
    		}
    		return stack+" "+msg;
    	}
    	
    public String getTokenErrorDisplay(Token t) {
    		return t.toString();
    	}



    public static class rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rule"
    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:45:1: rule : ( statement )+ -> ( ^( ROOT statement ) )+ ;
    public final RuleLangParser.rule_return rule() throws RecognitionException {
        RuleLangParser.rule_return retval = new RuleLangParser.rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RuleLangParser.statement_return statement1 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:46:2: ( ( statement )+ -> ( ^( ROOT statement ) )+ )
            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:47:3: ( statement )+
            {
            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:47:3: ( statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==IF) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:47:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_rule61);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(statement1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:16: -> ( ^( ROOT statement ) )+
            {
                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:47:19: ^( ROOT statement )
                    {
                    Object root_1 = (Object)adaptor.nil();
                    root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);

                    adaptor.addChild(root_1, stream_statement.nextTree());

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_statement.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rule"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:50:1: statement : ( ( IF condition '{' action '}' )+ -> ( ^( IF condition ^( THEN action ) ) )* | ( IF predicate '{' action '}' )+ -> ( ^( IF predicate ^( THEN action ) ) )* );
    public final RuleLangParser.statement_return statement() throws RecognitionException {
        RuleLangParser.statement_return retval = new RuleLangParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IF2=null;
        Token char_literal4=null;
        Token char_literal6=null;
        Token IF7=null;
        Token char_literal9=null;
        Token char_literal11=null;
        RuleLangParser.condition_return condition3 = null;

        RuleLangParser.action_return action5 = null;

        RuleLangParser.predicate_return predicate8 = null;

        RuleLangParser.action_return action10 = null;


        Object IF2_tree=null;
        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        Object IF7_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
        RewriteRuleSubtreeStream stream_predicate=new RewriteRuleSubtreeStream(adaptor,"rule predicate");
        RewriteRuleSubtreeStream stream_action=new RewriteRuleSubtreeStream(adaptor,"rule action");
        try {
            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:51:2: ( ( IF condition '{' action '}' )+ -> ( ^( IF condition ^( THEN action ) ) )* | ( IF predicate '{' action '}' )+ -> ( ^( IF predicate ^( THEN action ) ) )* )
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:52:3: ( IF condition '{' action '}' )+
                    {
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:52:3: ( IF condition '{' action '}' )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==IF) ) {
                            int LA2_2 = input.LA(2);

                            if ( (synpred2_RuleLang()) ) {
                                alt2=1;
                            }


                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:52:4: IF condition '{' action '}'
                    	    {
                    	    IF2=(Token)match(input,IF,FOLLOW_IF_in_statement86); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_IF.add(IF2);

                    	    pushFollow(FOLLOW_condition_in_statement88);
                    	    condition3=condition();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_condition.add(condition3.getTree());
                    	    char_literal4=(Token)match(input,44,FOLLOW_44_in_statement90); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_44.add(char_literal4);

                    	    pushFollow(FOLLOW_action_in_statement92);
                    	    action5=action();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_action.add(action5.getTree());
                    	    char_literal6=(Token)match(input,45,FOLLOW_45_in_statement94); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_45.add(char_literal6);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);



                    // AST REWRITE
                    // elements: action, IF, condition
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 53:7: -> ( ^( IF condition ^( THEN action ) ) )*
                    {
                        // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:53:10: ( ^( IF condition ^( THEN action ) ) )*
                        while ( stream_action.hasNext()||stream_IF.hasNext()||stream_condition.hasNext() ) {
                            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:53:10: ^( IF condition ^( THEN action ) )
                            {
                            Object root_1 = (Object)adaptor.nil();
                            root_1 = (Object)adaptor.becomeRoot(stream_IF.nextNode(), root_1);

                            adaptor.addChild(root_1, stream_condition.nextTree());
                            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:53:25: ^( THEN action )
                            {
                            Object root_2 = (Object)adaptor.nil();
                            root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(THEN, "THEN"), root_2);

                            adaptor.addChild(root_2, stream_action.nextTree());

                            adaptor.addChild(root_1, root_2);
                            }

                            adaptor.addChild(root_0, root_1);
                            }

                        }
                        stream_action.reset();
                        stream_IF.reset();
                        stream_condition.reset();

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:55:3: ( IF predicate '{' action '}' )+
                    {
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:55:3: ( IF predicate '{' action '}' )+
                    int cnt3=0;
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==IF) ) {
                            int LA3_2 = input.LA(2);

                            if ( (synpred4_RuleLang()) ) {
                                alt3=1;
                            }


                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:55:4: IF predicate '{' action '}'
                    	    {
                    	    IF7=(Token)match(input,IF,FOLLOW_IF_in_statement126); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_IF.add(IF7);

                    	    pushFollow(FOLLOW_predicate_in_statement128);
                    	    predicate8=predicate();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_predicate.add(predicate8.getTree());
                    	    char_literal9=(Token)match(input,44,FOLLOW_44_in_statement130); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_44.add(char_literal9);

                    	    pushFollow(FOLLOW_action_in_statement132);
                    	    action10=action();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_action.add(action10.getTree());
                    	    char_literal11=(Token)match(input,45,FOLLOW_45_in_statement134); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_45.add(char_literal11);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt3 >= 1 ) break loop3;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(3, input);
                                throw eee;
                        }
                        cnt3++;
                    } while (true);



                    // AST REWRITE
                    // elements: action, IF, predicate
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 56:7: -> ( ^( IF predicate ^( THEN action ) ) )*
                    {
                        // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:56:10: ( ^( IF predicate ^( THEN action ) ) )*
                        while ( stream_action.hasNext()||stream_IF.hasNext()||stream_predicate.hasNext() ) {
                            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:56:10: ^( IF predicate ^( THEN action ) )
                            {
                            Object root_1 = (Object)adaptor.nil();
                            root_1 = (Object)adaptor.becomeRoot(stream_IF.nextNode(), root_1);

                            adaptor.addChild(root_1, stream_predicate.nextTree());
                            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:56:25: ^( THEN action )
                            {
                            Object root_2 = (Object)adaptor.nil();
                            root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(THEN, "THEN"), root_2);

                            adaptor.addChild(root_2, stream_action.nextTree());

                            adaptor.addChild(root_1, root_2);
                            }

                            adaptor.addChild(root_0, root_1);
                            }

                        }
                        stream_action.reset();
                        stream_IF.reset();
                        stream_predicate.reset();

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class predicate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "predicate"
    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:59:1: predicate options {backtrack=true; } : ( LPAREN condition ( OR condition )+ ( predicate )? RPAREN -> ^( OR ( condition )+ ( predicate )? ) | LPAREN condition ( AND condition )+ ( predicate )? RPAREN -> ^( AND ( condition )+ ( predicate )? ) | ( OR ( predicate )* condition )+ -> ^( OR ( predicate )? ( condition )+ ) | ( AND ( predicate )* condition )+ -> ^( AND ( predicate )? ( condition )+ ) );
    public final RuleLangParser.predicate_return predicate() throws RecognitionException {
        RuleLangParser.predicate_return retval = new RuleLangParser.predicate_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LPAREN12=null;
        Token OR14=null;
        Token RPAREN17=null;
        Token LPAREN18=null;
        Token AND20=null;
        Token RPAREN23=null;
        Token OR24=null;
        Token AND27=null;
        RuleLangParser.condition_return condition13 = null;

        RuleLangParser.condition_return condition15 = null;

        RuleLangParser.predicate_return predicate16 = null;

        RuleLangParser.condition_return condition19 = null;

        RuleLangParser.condition_return condition21 = null;

        RuleLangParser.predicate_return predicate22 = null;

        RuleLangParser.predicate_return predicate25 = null;

        RuleLangParser.condition_return condition26 = null;

        RuleLangParser.predicate_return predicate28 = null;

        RuleLangParser.condition_return condition29 = null;


        Object LPAREN12_tree=null;
        Object OR14_tree=null;
        Object RPAREN17_tree=null;
        Object LPAREN18_tree=null;
        Object AND20_tree=null;
        Object RPAREN23_tree=null;
        Object OR24_tree=null;
        Object AND27_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_AND=new RewriteRuleTokenStream(adaptor,"token AND");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleTokenStream stream_OR=new RewriteRuleTokenStream(adaptor,"token OR");
        RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
        RewriteRuleSubtreeStream stream_predicate=new RewriteRuleSubtreeStream(adaptor,"rule predicate");
        try {
            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:60:2: ( LPAREN condition ( OR condition )+ ( predicate )? RPAREN -> ^( OR ( condition )+ ( predicate )? ) | LPAREN condition ( AND condition )+ ( predicate )? RPAREN -> ^( AND ( condition )+ ( predicate )? ) | ( OR ( predicate )* condition )+ -> ^( OR ( predicate )? ( condition )+ ) | ( AND ( predicate )* condition )+ -> ^( AND ( predicate )? ( condition )+ ) )
            int alt13=4;
            switch ( input.LA(1) ) {
            case LPAREN:
                {
                int LA13_1 = input.LA(2);

                if ( (synpred7_RuleLang()) ) {
                    alt13=1;
                }
                else if ( (synpred10_RuleLang()) ) {
                    alt13=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 13, 1, input);

                    throw nvae;
                }
                }
                break;
            case OR:
                {
                alt13=3;
                }
                break;
            case AND:
                {
                alt13=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }

            switch (alt13) {
                case 1 :
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:61:9: LPAREN condition ( OR condition )+ ( predicate )? RPAREN
                    {
                    LPAREN12=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_predicate187); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LPAREN.add(LPAREN12);

                    pushFollow(FOLLOW_condition_in_predicate189);
                    condition13=condition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_condition.add(condition13.getTree());
                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:61:26: ( OR condition )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==OR) ) {
                            int LA5_2 = input.LA(2);

                            if ( (synpred5_RuleLang()) ) {
                                alt5=1;
                            }


                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:61:27: OR condition
                    	    {
                    	    OR14=(Token)match(input,OR,FOLLOW_OR_in_predicate192); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_OR.add(OR14);

                    	    pushFollow(FOLLOW_condition_in_predicate194);
                    	    condition15=condition();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_condition.add(condition15.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);

                    // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:61:42: ( predicate )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( ((LA6_0>=LPAREN && LA6_0<=OR)||LA6_0==AND) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // /Users/arodriguez/Downloads/Projects/rules_engine/src/main/java/org/cep/rulesengine/parser/RuleLang.g:0:0: predicate
                            {
                            pushFollow(FOLLOW_predicate_in_predicate198);
                            predicate16=predicate();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_predicate.add(predicate16.getTree());

                            }
                            break;

                    }

                    RPAREN17=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_predicate201); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_RPAREN.add(RPAREN17);



                    // AST REWRITE
                    // elements: predicate, condition, OR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
